p6_tests.log
Fri Apr 14 11:18:05 AM CDT 2023
gcc psort.c -Wall -Werror -pthread -O -o psort
psort.c: In function ‘merge_enclosed’:
psort.c:87:1: error: control reaches end of non-void function [-Werror=return-type]
   87 | };
      | ^
psort.c: In function ‘qsort_enclosed’:
psort.c:152:1: error: control reaches end of non-void function [-Werror=return-type]
  152 | };
      | ^
cc1: all warnings being treated as errors
make: *** [Makefile:4: psort] Error 1
